# pymilvus-deep-research

./: README.md  evaluate.py  main.py  pyproject.toml
configs/: eval.yaml  main.yaml
src/evaluation/: __init__.py  evaluator.py
src/models/: __init__.py  base_model.py  embedder.py  language_model.py
src/question/: __init__.py  processor.py
src/rag/: __init__.py  rag_chain.py
src/reporter/: __init__.py  report_generator.py
src/search/: __init__.py  document_splitter.py  vector_store.py  wiki_fetcher.py
src/utils/: __init__.py  json_utils.py
