[tool.poetry]
package-mode = false
name = "pymilvus_deep_research"
version = "1.0.0"
description = "Pymilvus integration with various reasoning models"
authors = ["Your Name <you@example.com>"]


[tool.poetry.dependencies]
python = "~3.9"
dynaconf = "*"
tabulate = "0.9.0"
loguru = "0.7.2"
psutil = "5.9.0"
tqdm = "4.65.0"
pymilvus = "2.5.4"
unsloth = "*"
Wikipedia-API = "0.8.1"
langchain-huggingface = "0.1.2"
langchain-community = "0.3.17"
langchain-milvus = "0.1.8"
json-repair = "0.37.0"
bert-score = "0.3.13"
transformers = "4.49.0"
bitsandbytes = "*"
xformers = "0.0.25.post1"
trl = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"