[tool.poetry]
package-mode = false
name = "pymilvus_deep_research"
version = "1.0.0"
description = "Pymilvus integration with various reasoning models"
authors = ["Your Name <you@example.com>"]


[tool.poetry.dependencies]
python = "~3.11"
dynaconf = "*"
tqdm = "*"
pymilvus = "2.5.4"
unsloth = "2025.2.15"
unsloth-zoo = "2025.2.7"
torch = "2.4.1"
Wikipedia-API = "0.8.1"
langchain-huggingface = "0.1.2"
langchain-community = "0.3.18"
langchain-milvus = "0.1.8"
json-repair = "0.37.0"
bert-score = "0.3.13"
transformers = "4.48.2"
bitsandbytes = "0.45.2"
xformers = "0.0.28"
trl = "0.15.1"
peft = "0.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"